--- a/CarRental/car.html
+++ b/CarRental/car.html
@@ -63,7 +63,7 @@
 </div>
 
 <!-------------navbar-->
-<nav><input type="checkbox" class="check">
+<nav><input type="checkbox" class="check" id="check">
     <label for="check" class="checkbtn"><ion-icon name="menu-outline"></ion-icon></label>
     <ul>
         <li><a href="#">Home</a></li>
@@ -270,7 +270,7 @@ Officia quis maiores animi amet obcaecati? A ab sequi nisi unde velit?
 <div class="dbl">
     <div class="camry"></div>
     <div class="words">
-        <p>Do You want to $arn with Us? Don't Be Late</p>
+        <p>Do You want to $arn with Us? So Don't Be Late</p>
         <button>Become a Driver</button>
     </div>
 </div>
